Changing from fieldMessageStatus to use fieldMessageProps. Fixing spacing issue in Safari

--- a/packages/end-user/src/css/components/_text-input.scss
+++ b/packages/end-user/src/css/components/_text-input.scss
@@ -2,6 +2,8 @@
     @extend %input-text;
     @extend %input-box;
 
+    margin: 0px;
+
     &:focus {
         border-color: $input-focus-border-color;
     }
